8233570: [TESTBUG] HTMLEditorKit test bug5043626.java is failing on macos

Backport-of: a5b42ec8b29249814dda28e751ee363869e98da0