jdk/test/javax/net/ssl/ServerName/EndingDotHostname.java
@@ -26,7 +26,7 @@
  * @bug 8065422
  * @summary Trailing dot in hostname causes TLS handshake to fail
  * @library /javax/net/ssl/templates
- * @run main/othervm -Djdk.net.hosts.file=hostsForExample EndingDotHostname
+ * @run main/othervm EndingDotHostname
  */
 
 import javax.net.ssl.*;
